# BZ-Nota

./: .gitattributes  .gitignore  .gitmodules  CLIPBOARD.md  CMakeLists.txt  README.md  build.sh  bznota.desktop.in  index.html  install-build.sh  install-remote.sh  install.sh  release.sh  uninstall.sh
AI_CONTEXT/: ARCHITECTURE.md
Documents/: BZ-Nota_TDD.tex
assets/: BZ-Nota_Logo.ansi
docs/: BZ-Nota_TDD.tex  index.html  logo_raw.txt  style.css
src/: clipboard_manager.cpp  clipboard_manager.hpp  config_manager.cpp  config_manager.hpp  cursor_manager.cpp  cursor_manager.hpp  editing_manager.cpp  editing_manager.hpp  editor.cpp  editor.hpp  file_manager.cpp  file_manager.hpp  format_manager.cpp  format_manager.hpp  formatter.cpp  formatter.hpp  input_manager.cpp  input_manager.hpp  main.cpp  parser_manager.cpp  parser_manager.hpp  selection.cpp  selection.hpp  selection_manager.cpp  selection_manager.hpp  shared_types.hpp  text_buffer.cpp  text_buffer.hpp  ui_button.cpp  ui_button.hpp  ui_renderer.cpp  ui_renderer.hpp  undo_redo_manager.cpp  undo_redo_manager.hpp  utf8_utils.cpp  utf8_utils.hpp  version.hpp.in
